# kiwi

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  assimp.cmake  glew.cmake  glfw.cmake  glm.cmake  pthread-win.cmake  soil.cmake  spdlog.cmake
doc/html/: _component_8cpp_source.html  _component_8h.html  _game_object_8cpp.html  _game_object_8cpp.js  _game_object_8cpp_source.html  _game_object_8h.html  _game_object_8h_source.html  _hash_map_8h.html  _hash_map_8h_source.html  _logger_8cpp.html  _logger_8h.js  _material_8h.html  _material_8h_source.html  _mesh_8cpp.html  _mesh_8h.html  _mesh_library_8cpp.html  _mesh_renderer_8cpp.html  _mesh_renderer_8cpp_source.html  _mesh_renderer_8h.html  _object_8cpp.html  _object_8h.html  _object_8h.js  _object_8h_source.html  _renderer_8cpp.html  _renderer_8h.html  _service_8h_source.html  _service_locator_8cpp.html  _service_locator_8h.html  _shader_program_8cpp.html  _shader_program_8cpp_source.html  _shader_program_8h.html  _transform_8cpp.html  _transform_8h.html  _type_map_8cpp.html  _type_map_8cpp_source.html  _type_map_8h.html  annotated.html  class_kiwi_1_1_game_object.js  class_kiwi_1_1_hash_node-members.html  class_kiwi_1_1_key_hash.html  (+55 more)
doc/html/search/: all_1.js  all_10.js  all_4.js  all_6.js  all_9.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_6.js  classes_7.js  defines_0.js  defines_1.js  files_1.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  functions_8.js  functions_a.js  functions_c.js  related_1.js  search.css  typedefs_2.js  typedefs_3.js  typedefs_4.js  variables_0.js  variables_1.js  variables_3.js  variables_6.js  variables_7.js  variables_8.js  variables_a.js
docs/: index.html
docs/html/: _camera_8cpp.html  _camera_8cpp.js  _camera_8cpp_source.html  _camera_8h.html  _camera_8h_source.html  _component_8cpp.html  _component_8cpp_source.html  _component_8h.html  _component_8h.js  _component_8h_source.html  _game_object_8cpp.html  _game_object_8cpp_source.html  _game_object_8h.html  _game_object_8h_source.html  _logger_8cpp.html  _logger_8cpp_source.html  _logger_8h.html  _logger_8h_source.html  _material_8h.html  _material_8h_source.html  _mesh_8cpp.html  _mesh_8cpp_source.html  _mesh_8h.html  _mesh_8h_source.html  _mesh_library_8cpp.html  _mesh_library_8cpp_source.html  _mesh_library_8h.html  _mesh_library_8h_source.html  _mesh_renderer_8cpp.html  _mesh_renderer_8cpp_source.html  _mesh_renderer_8h.html  _mesh_renderer_8h_source.html  _object_8cpp.html  _object_8cpp.js  _object_8cpp_source.html  _object_8h.html  _object_8h_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  _renderer_8cpp.html  (+119 more)
docs/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  defines_0.js  defines_2.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  files_3.js  files_5.js  files_6.js  files_7.js  functions_1.js  (+32 more)
res/test2/: test2_floor.mtl
src/: CMakeLists.txt  Camera.h  Component.cpp  Component.h  GameObject.cpp  GameObject.h  Logger.cpp  Logger.h  Material.h  Mesh.cpp  Mesh.h  MeshLibrary.cpp  MeshLibrary.h  MeshRenderer.cpp  MeshRenderer.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Service.h  ServiceLocator.cpp  ServiceLocator.h  ShaderProgram.cpp  ShaderProgram.h  Transform.cpp  Transform.h  TypeMap.cpp  TypeMap.h  frag.glsl  main.cpp  util.h  vert.glsl
src/Core/: Component.cpp  Component.h  Engine.cpp  Engine.h  GameObject.cpp  GameObject.h  Object.cpp  Object.h  ServiceLocator.cpp  ServiceLocator.h  TypeMap.cpp
src/Rendering/: Framebuffer.cpp  Framebuffer.h  Material.h  Mesh.cpp  Mesh.h  MeshLibrary.cpp  MeshRenderer.cpp  MeshRenderer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
src/Scene/: Camera.cpp  Camera.h  Light.cpp  Light.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
src/Scripts/: Behavior.h
src/Seed/: Emitter.cpp  Emitter.h  FountainSpawner.cpp  FountainSpawner.h  GravityModule.cpp  GravityModule.h  Module.h  ParticleManager.cpp  ParticleManager.h  PhysicsModule.h  README.md  ResetForceModule.h  SeedMath.h  SeedPointRenderer.cpp  SeedPointRenderer.h  SeedRenderer.h  SeedSystem.cpp  SeedSystem.h  Spawner.cpp  Spawner.h  TickLifetimeModule.h
src/SeedDemo/: GlobeModule.cpp  GlobeModule.h  GlobeSpawner.cpp  GlobeSpawner.h  main.cpp
src/Shaders/: frag.glsl  lambertShadow.frag.glsl  seedpoint.frag.glsl  seedpoint.vert.glsl  shadowForward.vert.glsl  shadowdepth.vert.glsl  vert.glsl
src/ShadowDemo/: MeshObject.h  OribitingObject.h  RotatingMesh.h  main.cpp
src/botw-proc/: main.cpp  passthrough.vert.glsl  raymarch.frag.glsl
test/: CMakeLists.txt  ComponentTest.cpp  ComponentTests.h  GameObjectTest.cpp  GameObjectTests.h  TestSuite.cpp  TransformTest.cpp  TransformTests.h  googletest.cmake
